--- a/ZEIN_TeamPlanner/Views/CalendarEvents/Create.cshtml
+++ b/ZEIN_TeamPlanner/Views/CalendarEvents/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model ZEIN_TeamPlanner.Models.CreateEventDto
+﻿@using ZEIN_TeamPlanner.DTOs.EventsDto
+@model EventCreateDto
 
 @{
     ViewData["Title"] = "Create Event - " + ViewBag.GroupName;
