--- a/ZEIN_TeamPlanner/Views/CalendarEvents/Edit.cshtml
+++ b/ZEIN_TeamPlanner/Views/CalendarEvents/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model ZEIN_TeamPlanner.Models.EditEventDto
+﻿@using ZEIN_TeamPlanner.DTOs.EventsDto
+@model EditEventDto
 
 @{
     ViewData["Title"] = "Edit Event - " + ViewBag.GroupName;
