--- a/ZEIN_TeamPlanner/Views/Groups/Create.cshtml
+++ b/ZEIN_TeamPlanner/Views/Groups/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model ZEIN_TeamPlanner.Models.CreateGroupDto
+﻿@using ZEIN_TeamPlanner.DTOs.GroupsDto
+@model GroupCreateDto
 
 @{
     ViewData["Title"] = "Create Group";
