--- a/ZEIN_TeamPlanner/Views/Groups/Edit.cshtml
+++ b/ZEIN_TeamPlanner/Views/Groups/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model ZEIN_TeamPlanner.Models.EditGroupDto
+﻿@using ZEIN_TeamPlanner.DTOs.GroupsDto
+@model GroupEditDto
 
 @{
     ViewData["Title"] = "Edit Group";
