--- a/ZEIN_TeamPlanner/Views/TaskItems/Create.cshtml
+++ b/ZEIN_TeamPlanner/Views/TaskItems/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model ZEIN_TeamPlanner.Models.CreateTaskDto
+﻿@using ZEIN_TeamPlanner.DTOs.TasksDto
+@model TaskCreateDto
 
 @{
     ViewData["Title"] = "Create Task - " + ViewBag.GroupName;
