--- a/ZEIN_TeamPlanner/Views/TaskItems/Edit.cshtml
+++ b/ZEIN_TeamPlanner/Views/TaskItems/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model ZEIN_TeamPlanner.Models.EditTaskDto
+﻿@using ZEIN_TeamPlanner.DTOs.TasksDto
+@model TaskEditDto
 
 @{
     ViewData["Title"] = "Edit Task - " + ViewBag.GroupName;
